# ranking-experiment

./: README.md  compute_weighted_mean.py  creative_dataset.py  literary_hub_scraper.py  main.py  parse_imo.py  pyproject.toml  reedsy_prompts_scraper.py  run_creative_rankings.sh  sample.py  scrape_reedsy.py
