[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[tool.black]
line-length = 127

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
